--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   margin: 1rem;
 }
 
-.book-wraper{
+.book-wraper {
   padding: 5px;
   display: flex;
   justify-content: space-between;
@@ -29,7 +29,7 @@
 }
 
 .book-div:nth-child(odd) {
-  background: #dddddd;
+  background: #ddd;
 }
 
 .new-book-title {
@@ -55,7 +55,7 @@
   flex-direction: column;
   width: 50%;
   margin: 0 auto;
-  gap: 10px
+  gap: 10px;
 }
 
 .title-input,
